--- a/video-streaming/package.json
+++ b/video-streaming/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "azure-storage",
+  "name": "video-streaming",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "start:dev": "nodemon --legacy-watch ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "azure-storage": "^2.10.3",
     "express": "^4.18.1"
   },
   "devDependencies": {
