--- a/history/package.json
+++ b/history/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.0",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongodb": "^4.8.0"
