--- a/history/package.json
+++ b/history/package.json
@@ -15,7 +15,8 @@
     "amqplib": "^0.10.0",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "mongodb": "^4.8.0"
+    "mongodb": "^4.8.0",
+    "wait-port": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
