--- a/video-streaming/Dockerfile-dev
+++ b/video-streaming/Dockerfile-dev
@@ -5,5 +5,6 @@ COPY package*.json ./
 
 CMD npm config set cache-min 9999999 && \
     npm install && \
+    npx wait-port rabbit:5672 && \
     npm run start:dev
     
