--- a/video-streaming/package.json
+++ b/video-streaming/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "amqplib": "^0.10.0",
+    "express": "^4.18.1",
+    "wait-port": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
