--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ scripts/terraform.tfstate.backup
 scripts/terraform.tfstate
 scripts/.terraform.tfstate.lock.info
 scripts/.terraform.lock.hcl
+scripts/apply.sh
