--- a/video-streaming/package.json
+++ b/video-streaming/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "amqplib": "^0.10.0",
     "express": "^4.18.1",
+    "mongodb": "^4.8.0",
     "wait-port": "^0.3.0"
   },
   "devDependencies": {
