--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,22 @@
 version: '3'
 services:
+
+  db:
+    image: mongo:4.2.8
+    container_name: db
+    ports:
+      - "4000:27017"
+    restart: always
+
   rabbit:
     image: rabbitmq:3.8.5-management
     container_name: rabbit
     ports:
       - "5672:5672"
       - "15672:15672"
-    expose:
-      - "5672"
-      - "15672"
-    restart: "always"
+    restart: always
 
-  history:
-    image: history
-    build:
-      context: ./history
-      dockerfile: Dockerfile-dev
-    container_name: history
-    volumes:
-      - /tmp/history/npm-cache:/root/.npm:z
-      - ./history/src:/usr/src/app/src:z
-    ports:
-      - "4000:80"
-    environment:
-      - PORT=80
-      - NODE_ENV=development
-      - DBHOST=mongodb://seotube-mongo:0PEWRLvlOPvHQw9iQUvX9pzKE5TLq8wawnWbABq4aA7qs2QIkapIHZUdIaBmCuFBGnbbFLc0OeipobSxPh3ISQ==@seotube-mongo.mongo.cosmos.azure.com:10255/?ssl=true&retrywrites=false&maxIdleTimeMS=120000&appName=@seotube-mongo@
-      - DBNAME=video-streaming
-      - RABBIT=amqp://guest:guest@rabbit:5672
-    depends_on:
-      - rabbit
-    restart: "no"
   azure-storage:
-    # image: ssyrgstry.azurecr.io/azure-storage:latest
     image: azure-storage
     build:
       context: ./azure-storage
@@ -47,29 +31,48 @@ services:
     restart: "no"
 
   video-streaming:
-    # image: ssyrgstry.azurecr.io/video-streaming:latest
     image: video-streaming
     build:
       context: ./video-streaming
       dockerfile: Dockerfile-dev
-
     container_name: video-streaming
     volumes:
-      - /tmp/history/npm-cache:/root/.npm:z
+      - /tmp/video-streaming/npm-cache:/root/.npm:z
       - ./video-streaming/src:/usr/src/app/src:z
       - ./video-streaming/videos:/usr/src/app/videos:z
     ports:
       - "4002:80"
-
     environment:
       - PORT=80
+      - RABBIT=amqp://guest:guest@rabbit:5672
       - NODE_ENV=development
       - VIDEO_STORAGE_HOST=video-storage
       - VIDEO_STORAGE_PORT=80
-      - DBHOST=mongodb://seotube-mongo:0PEWRLvlOPvHQw9iQUvX9pzKE5TLq8wawnWbABq4aA7qs2QIkapIHZUdIaBmCuFBGnbbFLc0OeipobSxPh3ISQ==@seotube-mongo.mongo.cosmos.azure.com:10255/?ssl=true&retrywrites=false&maxIdleTimeMS=120000&appName=@seotube-mongo@
+      - DBHOST=mongodb://db:27017
       - DBNAME=video-streaming
-      - RABBIT=amqp://guest:guest@rabbit:5672
     depends_on:
+      - rabbit
+    restart: "no"
+
+  history:
+    image: history
+    build:
+      context: ./history
+      dockerfile: Dockerfile-dev
+    container_name: history
+    volumes:
+      - /tmp/history/npm-cache:/root/.npm:z
+      - ./history/src:/usr/src/app/src:z
+    ports:
+      - "4003:80"
+    environment:
+      - PORT=80
+      - RABBIT=amqp://guest:guest@rabbit:5672
+      - DBHOST=mongodb://db:27017
+      - DBNAME=history
+      - NODE_ENV=development
+    depends_on:
+      - db
       - rabbit
     restart: "no"
 
@@ -83,13 +86,15 @@ services:
       - /tmp/recommendations/npm-cache:/root/.npm:z
       - ./recommendations/src:/usr/src/app/src:z
     ports:
-      - "4003:80"
+      - "4004:80"
     environment:
       - PORT=80
       - RABBIT=amqp://guest:guest@rabbit:5672
-      - DBHOST=mongodb://seotube-mongo:0PEWRLvlOPvHQw9iQUvX9pzKE5TLq8wawnWbABq4aA7qs2QIkapIHZUdIaBmCuFBGnbbFLc0OeipobSxPh3ISQ==@seotube-mongo.mongo.cosmos.azure.com:10255/?ssl=true&retrywrites=false&maxIdleTimeMS=120000&appName=@seotube-mongo@
+      - DBHOST=mongodb://db:27017
       - DBNAME=recommendations
       - NODE_ENV=development
+
     depends_on:
+      - db
       - rabbit
     restart: "no"
