--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -28,4 +28,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          GITHUB_VERSION=$(git rev-list --all --count)
+          export VERSION=$GITHUB_VERSION
           sh ./scripts/deploy.sh
