--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -32,7 +32,7 @@ jobs:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-        run: |
+      - run: |
           GITHUB_VERSION=$(git rev-list --all --count)
           export VERSION=$GITHUB_VERSION
 
