--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -19,6 +19,11 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -27,7 +32,8 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-      - run: |
+
+        run: |
           GITHUB_VERSION=$(git rev-list --all --count)
           export VERSION=$GITHUB_VERSION
 
