이그노어 해제

--- a/.gitignore
+++ b/.gitignore
@@ -108,8 +108,8 @@ docker-compose.yml
 working/
 
 scripts/.terraform/
-scripts/terraform.tfstate.backup
-scripts/terraform.tfstate
+# scripts/terraform.tfstate.backup
+# scripts/terraform.tfstate
 scripts/.terraform.tfstate.lock.info
 scripts/.terraform.lock.hcl
 scripts/apply.sh
