--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 version: '3'
 services:
-
+  # mongodb
   db:
     image: mongo:4.2.8
     container_name: db
     ports:
-      - "4000:27017"
+      - "27017:27017"
+    expose:
+      - "27017"
     restart: always
 
   rabbit:
@@ -14,20 +16,47 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    expose:
+      - "5672"
+      - "15672"
     restart: always
-
-  azure-storage:
-    image: azure-storage
+  # db rest api
+  db-fixture-rest-api:
+    image: db-fixture-rest-api
     build:
-      context: ./azure-storage
+      context: ./db-fixture-rest-api
       dockerfile: Dockerfile
-    container_name: video-storage
+    container_name: db-fixture-rest-api
     ports:
-      - "4001:80"
+      - "9000:80"
     environment:
       - PORT=80
-      - STORAGE_ACCOUNT_NAME=ssystrg
-      - STORAGE_ACCESS_KEY=fgJqZz3YOTFvIDmRSbwy10baV84Vy6ya1xE0qd3p1ruTcgTmwGoKJCS1yIiAFSpDk0rR8r86qo/S+AStSAejXQ==
+      - DBHOST=mongodb://db:27017
+      - FIXTURES_DIR=fixtures
+    volumes:
+      - ./fixtures:/usr/src/app/fixtures:z
+    depends_on:
+      - db
+    restart: always
+
+  gateway:
+    image: gateway
+    build:
+      context: ./gateway
+      dockerfile: Dockerfile-dev
+    container_name: gateway
+    volumes:
+      - /tmp/gateway/npm-cache:/root/.npm:z
+      - ./gateway/src:/usr/src/app/src:z
+      - ./gateway/public:/usr/src/app/public:z
+    ports:
+      - "4000:80"
+    environment:
+      - PORT=80
+      - RABBIT=amqp://guest:guest@rabbit:5672
+      - NODE_ENV=development
+    depends_on:
+      - rabbit
     restart: "no"
 
   video-streaming:
@@ -39,19 +68,51 @@ services:
     volumes:
       - /tmp/video-streaming/npm-cache:/root/.npm:z
       - ./video-streaming/src:/usr/src/app/src:z
-      - ./video-streaming/videos:/usr/src/app/videos:z
     ports:
-      - "4002:80"
+      - "4001:80"
     environment:
       - PORT=80
       - RABBIT=amqp://guest:guest@rabbit:5672
       - NODE_ENV=development
-      - VIDEO_STORAGE_HOST=video-storage
-      - VIDEO_STORAGE_PORT=80
-      - DBHOST=mongodb://db:27017
-      - DBNAME=video-streaming
+    depends_on:
+      - db
+      - rabbit
+    restart: "no"
+  video-upload:
+    image: video-upload
+    build:
+      context: ./video-upload
+      dockerfile: Dockerfile-dev
+    container_name: video-upload
+    volumes:
+      - /tmp/video-upload/npm-cache:/root/.npm:z
+      - ./video-upload/src:/usr/src/app/src:z
+      - ./video-upload/uploads:/usr/src/app/uploads:z
+    ports:
+      - "4004:80"
+    environment:
+      - PORT=80
+      - RABBIT=amqp://guest:guest@rabbit:5672
+      - NODE_ENV=development
     depends_on:
       - rabbit
+    restart: "no"
+
+  azure-storage:
+    image: azure-storage
+    build:
+      context: ./azure-storage
+      dockerfile: Dockerfile-dev
+    container_name: video-storage
+    volumes:
+      - /tmp/azure-storage/npm-cache:/root/.npm:z
+      - ./azure-storage/src:/usr/src/app/src:z
+    ports:
+      - "4005:80"
+    environment:
+      - PORT=80
+      - STORAGE_ACCOUNT_NAME=ssystrg
+      - STORAGE_ACCESS_KEY=fgJqZz3YOTFvIDmRSbwy10baV84Vy6ya1xE0qd3p1ruTcgTmwGoKJCS1yIiAFSpDk0rR8r86qo/S+AStSAejXQ==
     restart: "no"
 
   history:
@@ -64,7 +125,7 @@ services:
       - /tmp/history/npm-cache:/root/.npm:z
       - ./history/src:/usr/src/app/src:z
     ports:
-      - "4003:80"
+      - "4002:80"
     environment:
       - PORT=80
       - RABBIT=amqp://guest:guest@rabbit:5672
@@ -76,25 +137,46 @@ services:
       - rabbit
     restart: "no"
 
-  recommendations:
-    image: recommendations
+  metadata:
+    image: metadata
     build:
-      context: ./recommendations
+      context: ./metadata
       dockerfile: Dockerfile-dev
-    container_name: recommendations
+    container_name: metadata
     volumes:
-      - /tmp/recommendations/npm-cache:/root/.npm:z
-      - ./recommendations/src:/usr/src/app/src:z
+      - /tmp/metadata/npm-cache:/root/.npm:z
+      - ./metadata/src:/usr/src/app/src:z
     ports:
-      - "4004:80"
+      - "4006:80"
     environment:
       - PORT=80
       - RABBIT=amqp://guest:guest@rabbit:5672
       - DBHOST=mongodb://db:27017
-      - DBNAME=recommendations
+      - DBNAME=metadata
       - NODE_ENV=development
-
     depends_on:
       - db
       - rabbit
     restart: "no"
+  # recommendations:
+  #   image: recommendations
+  #   build:
+  #     context: ./recommendations
+  #     dockerfile: Dockerfile-dev
+  #   container_name: recommendations
+  #   volumes:
+  #     - /tmp/recommendations/npm-cache:/root/.npm:z
+  #     - ./recommendations/src:/usr/src/app/src:z
+  #   ports:
+  #     - "4004:80"
+  #   environment:
+  #     - PORT=80
+  #     - RABBIT=amqp://guest:guest@rabbit:5672
+  #     - DBHOST=mongodb://db:27017
+  #     - DBNAME=recommendations
+  #     - NODE_ENV=development
+
+  #   depends_on:
+  #     - db
+  #     - rabbit
+  #   restart: "no"
