--- a/history/package.json
+++ b/history/package.json
@@ -2,23 +2,21 @@
   "name": "history",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
     "start:dev": "nodemon --legacy-watch ./src/index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "amqplib": "^0.10.0",
-    "body-parser": "^1.20.0",
-    "express": "^4.18.1",
-    "mongodb": "^4.8.0",
-    "wait-port": "^0.3.0"
+    "amqplib": "^0.5.5",
+    "express": "^4.17.1",
+    "mongodb": "^3.3.4",
+    "wait-port": "^0.2.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^1.19.1"
   }
 }
