--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,9 @@ services:
   db-rest-api:
     image: db-rest-api
     build:
-      context: ./db-fixture-rest-api
+      context: ./db-rest-api
       dockerfile: Dockerfile
-    container_name: db-fixture-rest-api
+    container_name: db-rest-api
     ports:
       - "9000:80"
     environment:
