--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,26 +126,26 @@ services:
       - STORAGE_ACCESS_KEY=fgJqZz3YOTFvIDmRSbwy10baV84Vy6ya1xE0qd3p1ruTcgTmwGoKJCS1yIiAFSpDk0rR8r86qo/S+AStSAejXQ==
     restart: "no"
 
-  metadata:
-    image: metadata
-    build:
-      context: ./metadata
-      dockerfile: Dockerfile-dev
-    container_name: metadata
-    volumes:
-      - /tmp/metadata/npm-cache:/root/.npm:z
-      - ./metadata/src:/usr/src/app/src:z
-    ports:
-      - "4006:80"
-    environment:
-      - PORT=80
-      - RABBIT=amqp://guest:guest@rabbit:5672
-      - DBHOST=mongodb://seotube-mongo:0PEWRLvlOPvHQw9iQUvX9pzKE5TLq8wawnWbABq4aA7qs2QIkapIHZUdIaBmCuFBGnbbFLc0OeipobSxPh3ISQ==@seotube-mongo.mongo.cosmos.azure.com:10255/?ssl=true&retrywrites=false&maxIdleTimeMS=120000&appName=@seotube-mongo@
-      - DBNAME=metadata
-      - NODE_ENV=development
-    depends_on:
-      - rabbit
-    restart: "no"
+  # metadata:
+  #   image: metadata
+  #   build:
+  #     context: ./metadata
+  #     dockerfile: Dockerfile-dev
+  #   container_name: metadata
+  #   volumes:
+  #     - /tmp/metadata/npm-cache:/root/.npm:z
+  #     - ./metadata/src:/usr/src/app/src:z
+  #   ports:
+  #     - "4006:80"
+  #   environment:
+  #     - PORT=80
+  #     - RABBIT=amqp://guest:guest@rabbit:5672
+  #     - DBHOST=mongodb://seotube-mongo:0PEWRLvlOPvHQw9iQUvX9pzKE5TLq8wawnWbABq4aA7qs2QIkapIHZUdIaBmCuFBGnbbFLc0OeipobSxPh3ISQ==@seotube-mongo.mongo.cosmos.azure.com:10255/?ssl=true&retrywrites=false&maxIdleTimeMS=120000&appName=@seotube-mongo@
+  #     - DBNAME=metadata
+  #     - NODE_ENV=development
+  #   depends_on:
+  #     - rabbit
+  #   restart: "no"
   # recommendations:
   #   image: recommendations
   #   build:
